--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Monblanproject</title>
-	<link href="https://fonts.googleapis.com/css?family=Lato:100,400,400i,700,700i" rel="stylesheet">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
+	<script src="https://unpkg.com/flatpickr"></script>
 </head>
 <body>
 	<header class="header">
@@ -27,15 +27,15 @@
 					<div class="block-mid-counter">11,787</div><div class="block-mid-text">followers</div>
 					<div class="block-mid-counter">112</div><div class="block-mid-text">following</div>
 				</div>
-				<div class="informanition-block-bot">
-					<div>Date</div>
-					<input type="date">
-					<input type="date">
+				<div class="informanition-block-date">
+					<span class="text">Date</span>
+					<input class="date" type="text" placeholder="from">
+					<input class="date" type="text" placeholder="to">
 				</div>					
 			</div>				
 		</div>
 	</header>	
-	<section class="section" id="section">
+	<section class="section" id="#section">
 		<div class="section-images" style="padding-top: 72px;">
 			<div class="image-block">
 				<a href="#"><img src="./images/square_1.jpg" alt="concert"/></a>					
@@ -248,10 +248,9 @@
 		</div>
 		
 		
-	</section>				
-	
-	<script src="js/script.js">
-		
-	</script>
+	</section>	
+	<script src="js/index.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.2.3/flatpickr.js"></script>
 </body>
 </html>
